service, about and project updated

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
                     <!-- Main Row -->
                     <div class="bringer-hero-title-wrap">
                         <!-- Title -->
-                        <h1 class="bringer-page-title" data-split-appear="fade-up" data-split-delay="100" data-split-by="line" data-split-unload="fade-up">Bring your creative ideas into Reality! with Pythoncoding4u</h1>
+                        <h1 class="bringer-page-title" data-split-appear="fade-up" data-split-delay="100" data-split-by="line" data-split-unload="fade-up">Bring your creative ideas into Reality!</h1>
                         <!-- Additional Media -->
                         <div class="stg-m-hide" data-appear="fade-left" data-unload="fade-right">
                             <img class="bringer-lazy" src="{% static 'img/pythoncoding.jpg' %}" data-src="{% static 'img/pythoncoding.jpg' %}" alt="Bringer" width="550" height="316">
@@ -26,7 +26,7 @@
                         <!-- Content -->
                         <div class="bringer-hero-media-content bringer-masked-content at-top-right">
                             <div class="bringer-hero-media-content-inner m-align-center" data-appear="fade-left" data-unload="fade-right" data-delay="100" data-threshold="0">
-                                We help creative agencies, designers, and other creative people showcase their work and connect with clients.
+                                Your one-stop solution for web development, e-commerce, AI/ML projects, mobile app development, and student project assistance.
                             </div>
                         </div>
 
