--- a/templates/project-list.html
+++ b/templates/project-list.html
@@ -52,19 +52,18 @@
              
             </section>
 
-            <!-- Section: Grid CTA -->
             <section class="backlight-top">
                 <div class="bringer-bento-grid bringer-grid-cta">
                     <div class="is-large bringer-masked-block" data-appear="fade-right" data-unload="fade-left">
                         <div class="bringer-grid-cta-media bringer-masked-media" data-bg-src="img/cta/grid-cta-background.jpg">
-                            <div class="bringer-grid-cta-heading">Need to amplify your voice?</div>
+                            <div class="bringer-grid-cta-heading">Need to Amplify Your Digital Presence?</div>
                         </div>
                         <div class="bringer-masked-content at-bottom-right">
                             <p class="bringer-large-text" data-appear="fade-right" data-delay="100">Let's chat about your goals &rarr;</p>
                         </div>
                     </div>
                     <div class="is-medium bringer-block" data-appear="fade-down" data-unload="fade-right">
-                        <h3>We will design campaigns that make the world listen</h3>
+                        <p>At PythonCoding4U, we're here to help you make a significant impact in the digital world. Whether you need a compelling website, a robust e-commerce platform, cutting-edge AI/ML solutions, or a dynamic mobile app, we have the expertise to elevate your brand and enhance your digital footprint.</p>
                     </div>
                     <div class="is-small" data-appear="zoom-out" data-delay="100" data-unload="zoom-out">
                         <a href="https://wa.me/918603862290" class="bringer-square-button">
@@ -72,7 +71,7 @@
                         </a>
                     </div>
                     <div class="is-small" data-appear="zoom-out" data-delay="200" data-unload="zoom-out">
-                        <img src="{%  static 'img/cta/grid-cta-02.jpg' %}" alt="Let's Chat" width="960" height="960">
+                        <img src="{% static 'img/cta/grid-cta-02.jpg' %}" alt="Let's Chat" width="960" height="960">
                     </div>
                 </div>
             </section>
