--- a/templates/services.html
+++ b/templates/services.html
@@ -11,7 +11,7 @@
                 <div class="stg-row">
                     <div class="stg-col-6 stg-offset-3 align-center stg-tp-col-10 stg-tp-offset-1">
                         <h1 class="bringer-page-title" data-appear="fade-up" data-unload="fade-up">Our Services</h1>
-                        <p class="bringer-large-text" data-split-appear="fade-up" data-delay="100" data-split-unload="fade-up">We offer a wide ↔ range of creative services to help businesses of all sizes achieve 🏆 their goals.</p>
+                        <p class="bringer-large-text" data-split-appear="fade-up" data-delay="100" data-split-unload="fade-up">Discover the range of services we offer to help you achieve your digital goals.</p>
                     </div>
                 </div>
             </section>
@@ -62,78 +62,12 @@
             <!-- Section: Our Services -->
             <section class="">
                 <!-- Section Title -->
-                <div class="stg-row bringer-section-title">
-                    <div class="stg-col-10 stg-offset-1">
-                        <div class="align-center">
-                            <h2 data-split-appear="fade-up" data-split-unload="fade-up">The full spectrum of brand 🪄 magic. Choose your adventure.</h2>
-                        </div>
-                    </div>
-                </div>
+             
                 <!-- Services List -->
                 <div class="bringer-detailed-list-wrap" data-appear="fade-up" data-delay="200" data-unload="fade-up">
                     <ul class="bringer-detailed-list" id="service-list">
 
-                        <li>
-                            <div class="bringer-detailed-list-title">
-                                <h4>Branding<span class="bringer-accent">.</span></h4>
-                            </div>
-                            <div class="bringer-detailed-list-description">
-                                <p>We weave visual stories and craft strategic messaging that resonate at heartstrings, build unwavering trust, and turn customers into fervent brand champions. Imagine seeing your logo come alive, not just a symbol but a rallying cry, an unwavering beacon in a sea of sameness. That's the power of branding we unleash.</p>
-                            </div>
-                            <div class="bringer-detailed-list-button">
-                                <span class="bringer-icon bringer-icon-explore"></span>
-                            </div>
-                            <a href="service-details.html"></a>
-                        </li>
-
-                        <li>
-                            <div class="bringer-detailed-list-title">
-                                <h4>Marketing<span class="bringer-accent">.</span></h4>
-                            </div>
-                            <div class="bringer-detailed-list-description">
-                                <p>We design data-driven campaigns that crackle with energy, ignite engagement like wildfire, and turn clicks into conversions. Picture social media abuzz with your brand, blog posts sparking curiosity, and targeted ads finding their perfect match. We're the storm that propels your brand to ever-higher heights.</p>
-                            </div>
-                            <div class="bringer-detailed-list-button">
-                                <span class="bringer-icon bringer-icon-explore"></span>
-                            </div>
-                            <a href="service-details.html"></a>
-                        </li>
-                        <li>
-                            <div class="bringer-detailed-list-title">
-                                <h4>Graphic Design<span class="bringer-accent">.</span></h4>
-                            </div>
-                            <div class="bringer-detailed-list-description">
-                                <p>We craft visual masterpieces that sing your brand's story in vibrant colors and captivating shapes. From logos that lodge in minds to infographics that make complex ideas sing, we inject emotional punch and crystal-clear clarity into every pixel. Let your visuals become the unforgettable face of your brand.</p>
-                            </div>
-                            <div class="bringer-detailed-list-button">
-                                <span class="bringer-icon bringer-icon-explore"></span>
-                            </div>
-                            <a href="service-details.html"></a>
-                        </li>
-                        <li>
-                            <div class="bringer-detailed-list-title">
-                                <h4>Web Design<span class="bringer-accent">.</span></h4>
-                            </div>
-                            <div class="bringer-detailed-list-description">
-                                <p>We sculpt user-friendly websites that convert visitors into loyal devotees, seamlessly blending stunning aesthetics with intuitive navigation and flawless experiences for every screen. Imagine your website as a warm, inviting space where potential customers linger, explore, and ultimately succumb to its charms. We craft that digital haven.</p>
-                            </div>
-                            <div class="bringer-detailed-list-button">
-                                <span class="bringer-icon bringer-icon-explore"></span>
-                            </div>
-                            <a href="service-details.html"></a>
-                        </li>
-                        <li>
-                            <div class="bringer-detailed-list-title">
-                                <h4>Content Creation<span class="bringer-accent">.</span></h4>
-                            </div>
-                            <div class="bringer-detailed-list-description">
-                                <p>We weave compelling narratives into blog posts, website copy, and social media content that resonate with your audience like a well-loved symphony. Picture search engines whispering your brand's name, and customers sharing your story with eager ears. We craft the voice that makes your brand sing.</p>
-                            </div>
-                            <div class="bringer-detailed-list-button">
-                                <span class="bringer-icon bringer-icon-explore"></span>
-                            </div>
-                            <a href="service-details.html"></a>
-                        </li>
+                      
                     </ul>
                 </div>
             </section>
@@ -144,16 +78,22 @@
                     <div class="bringer-marquee-inner">
                         <ul class="bringer-marquee-list">
                             <li>
-                                <h2>Unleash Your Creativity</h2>
+                                <h2>Innovation and Creativity</h2>
                             </li>
                             <li>
-                                <h2>Spark Imagination</h2>
+                                <h2>Commitment to Excellence</h2>
                             </li>
                             <li>
-                                <h2>Creative Firestorms</h2>
+                                <h2>Client Success</h2>
                             </li> 
                             <li>
-                                <h2>Ignite Results</h2>
+                                <h2>Continuous Learning</h2>
+                            </li>
+                            <li>
+                                <h2>Team Collaboration</h2>
+                            </li>
+                            <li>
+                                <h2>Impactful Solutions</h2>
                             </li>
                         </ul>
                     </div><!-- .bringer-marquee-inner -->
@@ -167,7 +107,7 @@
                     <div class="stg-col-8 stg-offset-2">
                         <div class="align-center">
                             <h2 data-appear="fade-up" data-unload="fade-up">What Makes Us Best</h2>
-                            <p class="bringer-large-text" data-appear="fade-up" data-delay="100" data-unload="fade-up">We are a passionate team of designers and developers who believe in the power of creativity. We help creative professionals create a strong online presence that showcases their work and tells their story.</p>
+                            <p class="bringer-large-text" data-appear="fade-up" data-delay="100" data-unload="fade-up">At PythonCoding4U, we stand out in the industry due to our unwavering commitment to excellence, innovation, and client satisfaction. Here are the key factors that set us apart:</p>
                         </div>
                     </div>
                 </div>
@@ -175,43 +115,70 @@
                 <div class="bringer-grid-2cols bringer-tp-grid-1col" data-stagger-appear="zoom-in" data-stagger-delay="100" data-delay="100" data-unload="fade-up">
                     <!-- Card Item 01 -->
                     <div class="bringer-block">
-                        <h4>We don't just design, we <span class="bringer-accent">unleash creative</span> firestorms<span class="bringer-accent">.</span></h4>
-                        <p>Tired of bland marketing and cookie-cutter websites? We infuse your brand with bold ideas and strategic brilliance, igniting campaigns that capture hearts and drive tangible results. Forget sparklers, we're here to light the fire.</p>
+                        <h4>Expertise and <span class="bringer-accent">Experience</span><span class="bringer-accent">.</span></h4>
+                        <p>Our team of professionals possesses deep expertise and years of experience across various domains, ensuring high-quality solutions for all your digital needs.</p>
                     </div><!-- .bringer-block -->
                     <!-- Card Item 02 -->
                     <div class="bringer-block">
-                        <h4>We <span class="bringer-accent">fuel creativity</span> with data, guide passion with precision<span class="bringer-accent">.</span></h4>
-                        <p>We're not just artistic dreamers, we're strategic alchemists. We blend data-driven insights with unbridled passion, ensuring your campaigns reach the right audience, hit the right chords, and deliver measurable results. Because passion without direction is a beautiful mess.</p>
+                        <h4><span class="bringer-accent">Comprehensive</span> Services<span class="bringer-accent">.</span></h4>
+                        <p>We offer a full spectrum of services, from web and e-commerce development to AI/ML projects and mobile app development, providing end-to-end solutions under one roof.</p>
                     </div><!-- .bringer-block -->
                     <!-- Card Item 03 -->
                     <div class="bringer-block">
-                        <h4>We craft <span class="bringer-accent">emotional connections</span>, not just visuals and copy<span class="bringer-accent">.</span></h4>
-                        <p>We delve deeper than pixels and prose. We understand the human heart, the language of emotions. We weave stories that resonate, visuals that linger in minds, and content that sparks conversations. Because true connection is the foundation of brand loyalty.</p>
+                        <h4><span class="bringer-accent">Customer-Centric </span>Approach<span class="bringer-accent">.</span></h4>
+                        <p>Your goals and satisfaction are our top priorities. We tailor our services to meet your unique needs and work closely with you to achieve the best results.</p>
                     </div><!-- .bringer-block -->
+
+
                     <!-- Card Item 04 -->
                     <div class="bringer-block">
-                        <h4>We don't just work with you, we become your <span class="bringer-accent">creative champions.</span></h4>
-                        <p>We don't see clients, we see collaborators. We believe in building partnerships, in understanding your vision, and becoming an extension of your team. Your goals are our canvas, your success our masterpiece. We paint your dreams into reality, together.</p>
+                        <h4>Quality <span class="bringer-accent">Assurance.</span></h4>
+                        <p>We adhere to strict quality standards and follow best practices to deliver solutions that exceed expectations and drive your success.</p>
                     </div><!-- .bringer-block -->
+
+                    <!-- Card Item 04 -->
+                    <div class="bringer-block">
+                        <h4>Innovation <span class="bringer-accent">and Adaptability.</span></h4>
+                        <p>We embrace the latest technologies and industry trends to provide innovative solutions that keep you ahead of the competition.</p>
+                    </div><!-- .bringer-block -->
+
+
+
+                    <!-- Card Item 03 -->
+                    <div class="bringer-block">
+                        <h4>Affordable <span class="bringer-accent">Pricing </span>Approach<span class="bringer-accent">.</span></h4>
+                        <p>We offer competitive pricing without compromising on quality, ensuring you get the best value for your investment.</p>
+                    </div><!-- .bringer-block -->
+
+
+
+                    <!-- Card Item 03 -->
+                    <div class="bringer-block">
+                        <h4><span class="bringer-accent">Ongoing  </span>Support<span class="bringer-accent">.</span></h4>
+                        <p>Our commitment to you doesn't end with project delivery. We provide ongoing support and maintenance to ensure your solutions remain effective and up-to-date.</p>
+                    </div><!-- .bringer-block -->
+
+
+
                 </div>
             </section>
 
             <!-- Section: Grid CTA -->
-            <section>
+            <section class="backlight-top">
                 <div class="bringer-bento-grid bringer-grid-cta">
                     <div class="is-large bringer-masked-block" data-appear="fade-right" data-unload="fade-left">
                         <div class="bringer-grid-cta-media bringer-masked-media" data-bg-src="img/cta/grid-cta-background.jpg">
-                            <div class="bringer-grid-cta-heading">Need to amplify your voice?</div>
+                            <div class="bringer-grid-cta-heading">Need to Amplify Your Digital Presence?</div>
                         </div>
                         <div class="bringer-masked-content at-bottom-right">
                             <p class="bringer-large-text" data-appear="fade-right" data-delay="100">Let's chat about your goals &rarr;</p>
                         </div>
                     </div>
                     <div class="is-medium bringer-block" data-appear="fade-down" data-unload="fade-right">
-                        <h3>We will design campaigns that make the world listen</h3>
+                        <p>At PythonCoding4U, we're here to help you make a significant impact in the digital world. Whether you need a compelling website, a robust e-commerce platform, cutting-edge AI/ML solutions, or a dynamic mobile app, we have the expertise to elevate your brand and enhance your digital footprint.</p>
                     </div>
                     <div class="is-small" data-appear="zoom-out" data-delay="100" data-unload="zoom-out">
-                        <a href="{% url 'contact' %}" class="bringer-square-button">
+                        <a href="https://wa.me/918603862290" class="bringer-square-button">
                             <span class="bringer-icon bringer-icon-explore"></span>
                         </a>
                     </div>
