--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -10,11 +10,11 @@
                 <div class="stg-row stg-bottom-gap-l">
                     <div class="stg-col-6 stg-offset-3 align-center">
                         <h1 class="bringer-page-title" data-appear="fade-up" data-unload="fade-up">Get in Touch</h1>
-                        <p class="bringer-large-text" data-appear="fade-up" data-delay="100" data-unload="fade-up">We help businesses of all sizes achieve their goals. We believe every brand, big or small, deserves to shine.</p>
+                        <p class="bringer-large-text" data-appear="fade-up" data-delay="100" data-unload="fade-up">We help businesses of all sizes achieve their digital goals. We believe every brand, big or small, deserves to shine online.</p>
                     </div>
                 </div>
                 <div class="bringer-parallax-media" data-parallax-speed="20" data-appear="fade-up" data-delay="200" data-unload="fade-up">
-                    <img class="bringer-lazy" src="img/null.png" data-src="img/inner-pages/contacts01.jpg" alt="Get in Touch" width="1920" height="960">
+                    <img class="bringer-lazy" src="{% static '/img/contactmain.jpg' %}" data-src="{% static '/img/contactmain.jpg' %}" alt="Get in Touch" width="100%" height="500">
                 </div><!-- .bringer-parallax-media -->
             </section>
 
@@ -23,26 +23,26 @@
                 <!-- Section Title -->
                 <div class="stg-row stg-bottom-gap">
                     <div class="stg-col-8">
-                        <h2 data-split-appear="fade-up" data-unload="fade-up">Ready to ignite your brand's fire? 🔥 Let's connect! 🤝</h2>
+                        <h2 data-split-appear="fade-up" data-unload="fade-up">Ready to ignite your digital journey? 🚀 Let's connect and make it happen! 🤝</h2>
                     </div>
                     <div class="stg-col-4"></div>
                 </div>
                 <!-- Section Content -->
                 <div class="stg-row stg-bottom-gap-l">
                     <div class="stg-col-6 stg-offset-6" data-appear="fade-up" data-delay="200" data-unload="fade-up">
-                        <p>At Bringer, we believe in the power of collaboration and shared passion. We're not just a creative agency, we're your partners in igniting your brand's unique potential. So, whether you're brimming with ideas or just starting to spark, reach out and let's chat!</p>
+                        <p>At PythonCoding4U, we believe in the power of collaboration and shared passion. We're not just a technology solutions provider; we're your partners in unleashing your brand's unique potential. So, whether you have a clear vision or are just starting to explore possibilities, reach out and let's make it happen!</p>
                     </div>
                 </div>
                 <!-- Grid Galery -->
                 <div class="bringer-grid-3cols bringer-parallax-media bringer-m-grid-3cols stg-m-small-gap" data-stagger-appear="fade-up" data-delay="200" data-stagger-unload="fade-up">
-                    <a href="img/inner-pages/contacts02.jpg" class="bringer-lightbox-link" data-size="960x960">
-                        <img class="bringer-lazy" src="img/null.png" data-src="img/inner-pages/contacts02.jpg" alt="Bringer" width="960" height="960">
+                    <a href="{% static 'img/inner-pages/contacts02.jpg' %}" class="bringer-lightbox-link" data-size="960x960">
+                        <img class="bringer-lazy" src="{% static 'img/inner-pages/contacts02.jpg' %}" data-src="{% static 'img/inner-pages/contacts02.jpg' %}" alt="Bringer" width="960" height="960">
                     </a>
-                    <a href="img/inner-pages/contacts03.jpg" class="bringer-lightbox-link" data-size="960x960">
-                        <img class="bringer-lazy" src="img/null.png" data-src="img/inner-pages/contacts03.jpg" alt="Bringer" width="960" height="960">
+                    <a href="{% static 'img/inner-pages/contacts03.jpg' %}" class="bringer-lightbox-link" data-size="960x960">
+                        <img class="bringer-lazy" src="{% static 'img/inner-pages/contacts03.jpg' %}" data-src="{% static 'img/inner-pages/contacts03.jpg' %}" alt="Bringer" width="960" height="960">
                     </a>
-                    <a href="img/inner-pages/contacts04.jpg" class="bringer-lightbox-link" data-size="960x960">
-                        <img class="bringer-lazy" src="img/null.png" data-src="img/inner-pages/contacts04.jpg" alt="Bringer" width="960" height="960">
+                    <a href="{% static 'img/inner-pages/contacts04.jpg' %}" class="bringer-lightbox-link" data-size="960x960">
+                        <img class="bringer-lazy" src="{% static 'img/inner-pages/contacts04.jpg' %}" data-src="{% static 'img/inner-pages/contacts04.jpg' %}" alt="Bringer" width="960" height="960">
                     </a>
                 </div>
             </section>
@@ -63,10 +63,10 @@
                     <div class="stg-col-4 stg-tp-col-6 stg-tp-bottom-gap">
                         <!-- Phone -->
                         <div class="bringer-block stg-aspect-square stg-vertical-space-between">
-                            <a href="tel:+12345556789" class="bringer-grid-item-link"></a>
+                            <a href="tel:+918603862290" class="bringer-grid-item-link"></a>
                             <div>
                                 <h5>Phone<span class="bringer-accent">.</span></h5>
-                                <h6>+1 (234) 555-67-89</h6>
+                                <h6>+91 8603862290</h6>
                             </div>
                             <p>Give us a call and chat directly with our friendly team. We're always happy to answer any questions.</p>
                         </div>
@@ -74,10 +74,10 @@
                     <div class="stg-col-4 stg-tp-col-6 stg-tp-bottom-gap">
                         <!-- Email -->
                         <div class="bringer-block stg-aspect-square stg-vertical-space-between">
-                            <a href="mailto:bringer@example.com" class="bringer-grid-item-link"></a>
+                            <a href="mailto:pythoncoding4u@codeajay.in" class="bringer-grid-item-link"></a>
                             <div>
                                 <h5>Email<span class="bringer-accent">.</span></h5>
-                                <h6>bringer@example.com</h6>
+                                <h6>pythoncoding4u@codeajay.in</h6>
                             </div>
                             <p>Send us a detailed message. We'll get back to you as soon as possible to discuss your creative project further.</p>
                         </div>
@@ -89,27 +89,27 @@
                                 <h5>Social Media<span class="bringer-accent">.</span></h5>
                                 <ul class="bringer-socials-list stg-small-gap" data-stagger-appear="fade-up" data-stagger-delay="75">
                                     <li>
-                                        <a href="#" target="_blank" class="bringer-socials-facebook">
+                                        <a href="https://www.facebook.com/people/Python-Coding/61555767339633/"  class="bringer-socials-facebook">
                                             <i></i>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#" target="_blank" class="bringer-socials-instagram">
+                                        <a href="https://www.instagram.com/pythoncoding4u/" class="bringer-socials-instagram">
                                             <i></i>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#" target="_blank" class="bringer-socials-x">
+                                        <a href="https://x.com/pythoncoding4u"  class="bringer-socials-x">
                                             <i></i>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#" target="_blank" class="bringer-socials-tiktok">
+                                        <a href="https://www.linkedin.com/company/pythoncoding4u/"  class="bringer-socials-linkedin">
                                             <i></i>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#" target="_blank" class="bringer-socials-patreon">
+                                        <a href="https://www.youtube.com/channel/UClSmhe6_co8Vbe690nds3VA"  class="bringer-socials-youtube">
                                             <i></i>
                                         </a>
                                     </li>
@@ -122,8 +122,8 @@
             </section>
 
             <!-- Map -->
-            <section>
-                <!-- Section Title -->
+            <!-- <section>
+              
                 <div class="stg-row bringer-section-title">
                     <div class="stg-col-8 stg-offset-2">
                         <div class="align-center">
@@ -132,10 +132,10 @@
                         </div>
                     </div>
                 </div>
-                <!-- Contacts Grid -->
+               
                 <div class="stg-row">
                     <div class="stg-col-4 stg-tp-col-6 stg-m-bottom-gap" data-appear="fade-right" data-delay="100" data-unload="fade-left">
-                        <!-- Phone -->
+                       
                         <div class="bringer-block stg-aspect-square stg-vertical-space-between">
                             <a href="https://maps.app.goo.gl/WbTG6EKuF9dE1Xuy8" class="bringer-grid-item-link"></a>
                             <div>
@@ -149,7 +149,7 @@
                         <iframe class="bringer-google-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3067.943072055294!2d-104.99509669999999!3d39.7409296!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x876c78d2480272f1%3A0x1b2acd6e38844602!2s1250%20Welton%20St%2C%20Denver%2C%20CO%2080204%2C%20USA!5e0!3m2!1sen!2sua!4v1705074190340!5m2!1sen!2sua" width="790" height="379" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
-            </section>
+            </section> -->
 
             <!-- Section: CTA Form -->
             <section class="backlight-top is-fullwidth">
@@ -163,7 +163,11 @@
                                 <input type="text" id="name" name="name" placeholder="Your Name" required>
                                 <!-- Field: Email -->
                                 <label for="email">Your Email</label>
-                                <input type="email" id="email" name="email" placeholder="email@example.com" required>    
+                                <input type="email" id="email" name="email" placeholder="email@example.com" required>  
+                                
+                                <label for="number">Your Phone No.</label>
+                                <input type="number" id="phone" name="phone" placeholder="+918603862290" required>    
+                            
                                 <!-- Field: Message -->
                                 <label for="message">Your Message</label>
                                 <textarea id="message" name="message" placeholder="Your Message" required></textarea>
@@ -177,7 +181,7 @@
                     <div class="stg-col-6 stg-offset-1" data-unload="fade-right">
                         <div class="bringer-cta-form-content">
                             <div class="bringer-cta-form-title" data-split-appear="fade-up" data-split-delay="100" data-split-by="line">
-                                Let's discuss your next creative project.
+                                Let's discuss your next innovative project.
                             </div>
                             <div class="bringer-cta-text">
                                 <div class="stg-row stg-valign-middle">
@@ -185,24 +189,25 @@
                                         <i class="bringer-cta-icon"></i>
                                     </div>
                                     <div class="stg-col-8 stg-tp-col-7 stg-m-col-8 stg-m-offset-1" data-appear="fade-left">
-                                        <p class="bringer-large-text">We help creative agencies, designers, and other creative people showcase their perfect work.</p>
+                                        <p class="bringer-large-text">
+                                            We help creative agencies, designers, and other innovators showcase their exceptional work.</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="bringer-cta-counters bringer-grid-3cols bringer-m-grid-3cols" data-stagger-appear="fade-up" data-stagger-delay="100">
                                 <!-- Counter Item -->
                                 <div class="bringer-counter bringer-small-counter" data-delay="3000">
-                                    <div class="bringer-counter-number">420</div>
+                                    <div class="bringer-counter-number">30+</div>
                                     <div class="bringer-counter-label">Projects Done</div>
                                 </div><!-- .bringer-counter -->
                                 <!-- Counter Item -->
                                 <div class="bringer-counter bringer-small-counter" data-delay="3000">
-                                    <div class="bringer-counter-number" data-suffix="K+">8</div>
+                                    <div class="bringer-counter-number" data-suffix="+">20</div>
                                     <div class="bringer-counter-label">Happy Clients</div>
                                 </div><!-- .bringer-counter -->
                                 <!-- Counter Item -->
                                 <div class="bringer-counter bringer-small-counter" data-delay="3000">
-                                    <div class="bringer-counter-number" data-suffix="+">12</div>
+                                    <div class="bringer-counter-number" data-suffix="+">5</div>
                                     <div class="bringer-counter-label">Years in Work</div>
                                 </div><!-- .bringer-counter -->
                             </div>
