--- a/templates/service-details.html
+++ b/templates/service-details.html
@@ -14,7 +14,7 @@
                            
                         </div>
                         <div class="align-right" data-appear="fade-right">
-                            <a href="pricing.html" class="bringer-icon-link">
+                            <a href="{% url 'contact' %}" class="bringer-icon-link">
                                 <div class="bringer-icon-link-content">
                                     <h6>
                                         Unleash your
