--- a/templates/header.html
+++ b/templates/header.html
@@ -99,9 +99,10 @@
                             <a href="{% url 'services' %}">Services</a>
                         </li>
 
-                        <!-- <li id="blog">
-                            <a href="#">Blogs</a>
-                        </li> -->
+                        <li id="blog">
+                            <a href="{% url 'blogs' %}">Blogs</a>
+                        </li>
+
                         <li id="contact">
                             <a href="{% url 'contact' %}">Contacts</a>
                         </li>
