--- a/templates/blog-list.html
+++ b/templates/blog-list.html
@@ -7,6 +7,9 @@
     <main id="bringer-main">
         <div class="stg-container">
             <!-- Section: Page Title -->
+
+
+
             <section class="backlight-bottom">
                 <div class="stg-row">
                     <div class="stg-col-6 stg-offset-3">
@@ -22,33 +25,12 @@
             <section>
                 <!-- Portfolio Grid -->
                 <div id="blog-cards-container" class="bringer-grid-3cols bringer-tp-grid-2cols bringer-tp-centered-last-item stg-normal-gap bringer-parallax-media" data-stagger-appear="fade-up" data-threshold="0.5" data-stagger-delay="150" data-stagger-unload="fade-up">
-                    
-                    <!-- Portfolio Card Item 01 -->
-                    <div class="bringer-block bringer-portfolio-card">
-                        <div class="bringer-portfolio-card-image">
-                            <img class="bringer-lazy" src="img/null.png" data-src="img/portfolio/portfolio01.jpg" alt="" width="1200" height="1200">
-                        </div>
-                        <div class="bringer-portfolio-card-footer">
-                            <div class="bringer-portfolio-card-title">
-                                <span class="bringer-meta">Branding</span>
-                                <h6>Curology</h6>
-                                <p style="margin-top:5px;">At PythonCoding4U, we're here to help you make a significant impact in the digital world.</p>
-                                <span class="bringer-icon bringer-icon-explore"></span>
-                            </div>
-                            
-                        </div>
-                        <a href="portfolio-post01.html"></a>
-                    </div><!-- .bringer-portfolio-card -->
-                                        
-                                    
-                    
-                </div><!-- .bringer-grid -->
+                </div>
+                <!-- .bringer-grid -->
             </section>
 
 
-
-
-
+ 
             <!-- Section: Grid CTA -->
             <section class="backlight-top">
                 <div class="bringer-bento-grid bringer-grid-cta">
